--- a/interfaces/_state_react_subscribe_.iprops.html
+++ b/interfaces/_state_react_subscribe_.iprops.html
@@ -62,13 +62,21 @@
 					<a href="_state_react_subscribe_.iprops.html">IProps</a>
 				</li>
 			</ul>
-			<h1>Interface IProps</h1>
+			<h1>Interface IProps&lt;T&gt;</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-type-parameters">
+				<h3>Type parameters</h3>
+				<ul class="tsd-type-parameters">
+					<li>
+						<h4>T</h4>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
@@ -100,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state-react/Subscribe.ts#L10">state-react/Subscribe.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/Subscribe.ts#L11">state-react/Subscribe.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -108,14 +116,14 @@
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-siganture">
 								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-property tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">__type</span></li>
+									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><a href="../modules/_state_state_.html#imergedstate" class="tsd-signature-type">IMergedState</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">__type</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
 										<h4 class="tsd-parameters-title">Parameters</h4>
 										<ul class="tsd-parameters">
 											<li>
-												<h5>value: <span class="tsd-signature-type">any</span></h5>
+												<h5>value: <a href="../modules/_state_state_.html#imergedstate" class="tsd-signature-type">IMergedState</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
 											</li>
 										</ul>
 										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">__type</span></h4>
@@ -131,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">dispose<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state-react/Subscribe.ts#L11">state-react/Subscribe.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/Subscribe.ts#L12">state-react/Subscribe.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state-react/Subscribe.ts#L9">state-react/Subscribe.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/Subscribe.ts#L10">state-react/Subscribe.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -149,13 +157,13 @@
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-siganture">
 								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-property tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&gt;</span></li>
+									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
-										<h4 class="tsd-returns-title">Returns <a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a>
+										<h4 class="tsd-returns-title">Returns <a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>
 											<span class="tsd-signature-symbol"> | </span>
-											<span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&gt;</span>
+											<span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span>
 										</h4>
 									</li>
 								</ul>
@@ -246,7 +254,7 @@
 					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="_state_react_subscribe_.iprops.html" class="tsd-kind-icon">IProps</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
@@ -262,10 +270,10 @@
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a>
 					</li>
 				</ul>
