--- a/modules/_state_react_subscribe_.html
+++ b/modules/_state_react_subscribe_.html
@@ -79,9 +79,9 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.iprops.html" class="tsd-kind-icon">IProps</a></li>
-								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a></li>
-								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.iprops.html" class="tsd-kind-icon">IProps</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a></li>
 							</ul>
 						</section>
 					</div>
@@ -167,13 +167,13 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="../classes/_state_react_subscribe_.subscribe.html" class="tsd-kind-icon">Subscribe</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="../interfaces/_state_react_subscribe_.iprops.html" class="tsd-kind-icon">IProps</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="../interfaces/_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="../interfaces/_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a>
 					</li>
 				</ul>
