--- a/classes/_state_stringstate_.stringstate.html
+++ b/classes/_state_stringstate_.stringstate.html
@@ -73,7 +73,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<a href="_state_state_.state.html" class="tsd-signature-type">State</a>
+						<a href="_state_state_.state.html" class="tsd-signature-type">State</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span>
 						<ul class="tsd-hierarchy">
 							<li>
 								<span class="target">StringState</span>
@@ -127,7 +127,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/StringState.ts#L4">state/StringState.ts:4</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/StringState.ts#L4">state/StringState.ts:4</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -149,20 +149,28 @@
 					<div class="tsd-signature tsd-kind-icon">initial<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/StringState.ts#L4">state/StringState.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/StringState.ts#L4">state/StringState.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
 					<a name="state" class="tsd-anchor"></a>
 					<h3>state</h3>
-					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
+					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#state">state</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/State.ts#L2">state/State.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L12">state/State.ts:12</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+							<li class="tsd-parameter">
+								<h5>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
+							</li>
+						</ul>
+					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -177,7 +185,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/StringState.ts#L12">state/StringState.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/StringState.ts#L12">state/StringState.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -195,7 +203,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#dispose">dispose</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/State.ts#L34">state/State.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L44">state/State.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -206,17 +214,17 @@
 					<a name="get" class="tsd-anchor"></a>
 					<h3>get</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">get<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">get<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../modules/_state_state_.html#imergedstate" class="tsd-signature-type">IMergedState</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#get">get</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/State.ts#L18">state/State.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L28">state/State.ts:28</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="../modules/_state_state_.html#imergedstate" class="tsd-signature-type">IMergedState</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -230,7 +238,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/StringState.ts#L13">state/StringState.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/StringState.ts#L13">state/StringState.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -247,7 +255,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/StringState.ts#L11">state/StringState.ts:11</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/StringState.ts#L11">state/StringState.ts:11</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -264,20 +272,20 @@
 					<a name="setstate" class="tsd-anchor"></a>
 					<h3>set<wbr>State</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">set<wbr>State<span class="tsd-signature-symbol">(</span>newState<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">set<wbr>State<span class="tsd-signature-symbol">(</span>newState<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#setstate">setState</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/State.ts#L9">state/State.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L19">state/State.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>newState: <span class="tsd-signature-type">any</span></h5>
+									<h5>newState: <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -288,20 +296,20 @@
 					<a name="subscribe" class="tsd-anchor"></a>
 					<h3>subscribe</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">subscribe<span class="tsd-signature-symbol">(</span>callback<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">(Anonymous function)</span></li>
+						<li class="tsd-signature tsd-kind-icon">subscribe<span class="tsd-signature-symbol">(</span>callback<span class="tsd-signature-symbol">: </span><a href="../modules/_state_state_.html#istatecallback" class="tsd-signature-type">IStateCallback</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">(Anonymous function)</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#subscribe">subscribe</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/state/State.ts#L23">state/State.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L33">state/State.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>callback: <span class="tsd-signature-type">any</span></h5>
+									<h5>callback: <a href="../modules/_state_state_.html#istatecallback" class="tsd-signature-type">IStateCallback</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">(Anonymous function)</span></h4>
