--- a/modules/_state_valuestate_.html
+++ b/modules/_state_valuestate_.html
@@ -73,7 +73,7 @@
 						<section class="tsd-index-section ">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/_state_valuestate_.valuestate.html" class="tsd-kind-icon">Value<wbr>State</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_state_valuestate_.valuestate.html" class="tsd-kind-icon">Value<wbr>State</a></li>
 							</ul>
 						</section>
 					</div>
@@ -156,7 +156,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="../classes/_state_valuestate_.valuestate.html" class="tsd-kind-icon">Value<wbr>State</a>
 					</li>
 				</ul>
